@@ -44,9 +44,9 @@ package Mj::TextOutput;
 use Mj::Format;
 use strict;
 
-#use AutoLoader 'AUTOLOAD';
+use AutoLoader 'AUTOLOAD';
 1;
-#__END__
+__END__
 
 =head2 accept
 
